{
  "version": 4,
  "terraform_version": "1.14.3",
  "serial": 116,
  "lineage": "4d03cb7f-5983-952f-918f-b0fb4258b826",
  "resources": [
    {
      "mode": "data",
      "type": "aws_subnet",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "subnet-0285b19e3dad1f01c",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:146469921099:subnet/subnet-0285b19e3dad1f01c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1e",
            "availability_zone_id": "use1-az3",
            "available_ip_address_count": 4091,
            "cidr_block": "172.31.48.0/20",
            "default_for_az": true,
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0285b19e3dad1f01c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "146469921099",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "vpc_id": "vpc-0a21ba8fbf9b5342c"
          },
          "identity_schema_version": 0
        },
        {
          "index_key": "subnet-06d424fbf6695d1c5",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:146469921099:subnet/subnet-06d424fbf6695d1c5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "available_ip_address_count": 4090,
            "cidr_block": "172.31.80.0/20",
            "default_for_az": true,
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06d424fbf6695d1c5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "146469921099",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "vpc_id": "vpc-0a21ba8fbf9b5342c"
          },
          "identity_schema_version": 0
        },
        {
          "index_key": "subnet-08d66d527c7477c44",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:146469921099:subnet/subnet-08d66d527c7477c44",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az4",
            "available_ip_address_count": 4089,
            "cidr_block": "172.31.16.0/20",
            "default_for_az": true,
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08d66d527c7477c44",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "146469921099",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "vpc_id": "vpc-0a21ba8fbf9b5342c"
          },
          "identity_schema_version": 0
        },
        {
          "index_key": "subnet-091ab6ae37b554c4e",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:146469921099:subnet/subnet-091ab6ae37b554c4e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1f",
            "availability_zone_id": "use1-az5",
            "available_ip_address_count": 4090,
            "cidr_block": "172.31.64.0/20",
            "default_for_az": true,
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-091ab6ae37b554c4e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "146469921099",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "vpc_id": "vpc-0a21ba8fbf9b5342c"
          },
          "identity_schema_version": 0
        },
        {
          "index_key": "subnet-0ddca4eda7141f239",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:146469921099:subnet/subnet-0ddca4eda7141f239",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "available_ip_address_count": 4091,
            "cidr_block": "172.31.0.0/20",
            "default_for_az": true,
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ddca4eda7141f239",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "146469921099",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "vpc_id": "vpc-0a21ba8fbf9b5342c"
          },
          "identity_schema_version": 0
        },
        {
          "index_key": "subnet-0ebbad3dba8a7a3ff",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:146469921099:subnet/subnet-0ebbad3dba8a7a3ff",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1d",
            "availability_zone_id": "use1-az6",
            "available_ip_address_count": 4091,
            "cidr_block": "172.31.32.0/20",
            "default_for_az": true,
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ebbad3dba8a7a3ff",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "146469921099",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "vpc_id": "vpc-0a21ba8fbf9b5342c"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:146469921099:vpc/vpc-0a21ba8fbf9b5342c",
            "cidr_block": "172.31.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-00feededa9f6fcb9e",
                "cidr_block": "172.31.0.0/16",
                "state": "associated"
              }
            ],
            "default": true,
            "dhcp_options_id": "dopt-070843453ff2879a4",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0a21ba8fbf9b5342c",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-094180c93d988c20a",
            "owner_id": "146469921099"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "apprunner",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:146469921099:security-group/sg-0e1b8258e1a7f1139",
            "description": "Allow App Runner egress to dev resources",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e1b8258e1a7f1139",
            "ingress": [],
            "name": "club-ops-dev-apprunner-sg",
            "name_prefix": "",
            "owner_id": "146469921099",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {
              "Environment": "dev",
              "Owner": "JoshuaKessell",
              "Project": "ClubOperationsPOS"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a21ba8fbf9b5342c"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "db",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:146469921099:security-group/sg-075945f3cc3810afd",
            "description": "Allow Postgres access from App Runner",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-075945f3cc3810afd",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": null,
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0e1b8258e1a7f1139"
                ],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "club-ops-dev-db-sg",
            "name_prefix": "",
            "owner_id": "146469921099",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {
              "Environment": "dev",
              "Owner": "JoshuaKessell",
              "Project": "ClubOperationsPOS"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a21ba8fbf9b5342c"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.apprunner",
            "data.aws_vpc.default"
          ]
        }
      ]
    }
  ]
}